# basic-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  module.cpp
cmake/: BuildType.cmake  BuildingSimpleTargets.cmake  CompilerAndLinkerEssentials.cmake  FlowControl.cmake  FunctionsAndMacros.cmake  LanguageRequirements.cmake  Modules.cmake  Policies.cmake  Properties.cmake  TargetTypes.cmake  UsingSubdirectories.cmake  Util.cmake  Variables.cmake  building-simple-targets.cmake  flow-control.cmake  functions-and-macros.cmake  generator-expressions.cmake  properties.cmake  using-subdirectories.cmake  variables.cmake
cmake/modules/: FindSamplePackage.cmake  SampleModule.cmake
include/module/: module.h  util.h
include/modules/: module.h  submodule.h  version.h
include/util/: util.h
src/: CMakeLists.txt  Sample.cmake  Sample2.cmake  module.cpp
